--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -9,6 +9,23 @@ events {
 
 http {
 
+	server {
+		
+		listen 80 default;
+
+		location ^~ /uploads/ {
+			root /home/box/web;
+		}
+
+		location ~*^.+\.\w+$ {
+			root /home/box/web/public;
+		}
+
+		location / {
+			return 404;
+		}
+	}
+
 	##
 	# Basic Settings
 	##
